tests/fixtures/invalid/array_return_type.c
int make(void)[2] { return 0; }
int main(void) { return make()[0]; }
